2009-05-24 - release 0.8.1a
        - Fix bootloader version number generation

2009-05-20 - release 0.8.1
        - Fix uIEC/IDE SD card change detection
        - Dreamload support for uIEC
        - Mark the RTC time as valid after setting the clock
        - Delay SPI initialisation until absolutely required
        - Show disk change confirmation even when the error blink is active
        - Exit the FC3 fastloader if ATN is active
        - Fix indentation of 1000+ block files
        - Remove 0-byte from the long version message
        - Fix multiple save-with-replace bugs
        - Ignore directories when matching file name wildcards

2009-03-08 - release 0.8.0
        - direct sector access of the real storage device
        - ignore DEL files in file_open
        - drive mapper
        - EXOS V3 fastloader support
        - requires avr-libc 1.6.x

2008-10-02 - release 0.8.0pre1
        - Implement Dreamload emulation
        - RTC support
        - Dataflash support
        - Multi-file scratch
        - Copy command
        - Large buffer support
        - Final Cartridge 3 freezed file fastloader support
        - D71/D81 disk image support
        - parse FSINFO sector for faster FAT32 free space calculation
        - partial REL file support

2008-07-09 - release 0.7.3
        - Bugfix: Free buffers on error in M2I and D64
          (fixes "D64 size increases to 1.1M when its free space runs out")

2008-06-10 - release 0.7.2
        - Bugfix: rename doesn't corrupt files with hidden extensions anymore
        - Bugfix: RD works again
        - Bugfix: On uIEC the ATN ACK interrupt was never disabled
        - case-insensitive matching of FAT filenames

2008-06-05 - release 0.7.1
        - Bugfix: Mark sectors 18/0 and 18/1 as used during D64 format
        - Bugfix: Single-char dir patterns are directory numbers
        - Bugfix: Short N: on D64 should clean only the first dir sector
        - case-insensitive matching of FAT filenames